fixed some layout problems in wp form

--- a/app/assets/stylesheets/content/_forms.css.sass
+++ b/app/assets/stylesheets/content/_forms.css.sass
@@ -30,7 +30,6 @@
 
 @mixin input-style
   width: $content_from_input_width
-  height: 30px
   line-height: 30px
   border: $content_form_input_border
   padding: 0 0 0 10px
@@ -49,21 +48,20 @@
 @mixin select-style
   @include input-style
   margin: 0
-  height: 32px
   min-width: $content_from_input_width + 10
   max-width: $content_from_input_width + 10
-  padding: 0 0 0 10px
+  padding: 7px 10px 7px 10px
+  option
+    padding-left: 10px
 
 @mixin label-style
   width: 155px
   margin-left: 0
   text-align: left
   font-weight: normal
-  height: 30px
   float: none
   display: inline-block
   padding-right: 5px
-  @include text-shortener
   vertical-align: middle
 
 #login-form form, #work_package-form, #update #work_package-form
@@ -91,6 +89,12 @@
   input
     &[type=password], &[type=text]
       @include input-style
+      height: 30px
+    &#work_package_subject
+      width: 50%
+  textarea
+    font-family: $font_family_bold
+    font-size: $global_font_size
 
   table
     border: 0 none
@@ -137,6 +141,7 @@
   .handle_attachments, #attachments
     > label
       @include label-style
+      height: 30px
       display: block
     margin-bottom: 30px
 
@@ -149,6 +154,7 @@
       height: 32px
       > input
         @include input-style
+        height: 30px
         border: none
         &:hover, &:focus
           border: none
